# you_r_machine_levels

./: README.md  main.py  pyproject.toml
api_v1/: __init__.py
api_v1/levels/: crud.py  dependencies.py  schemas.py  views.py
api_v1/scores/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  level.py  score.py
