[tool.poetry]
name = "you-r-machine-levels"
version = "0.1.0"
description = "Level management microservice for YouRMachine game"
authors = ["Arseniy <yarmolinskiyam@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.30"}
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
aiosqlite = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
